--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -22,6 +22,8 @@
   .navigation {
     display: flex;
     justify-content: space-between;
+    margin-top: 20px;
+    margin-top: 20px;
 
     h1 {
       font-size: 25px;
@@ -31,8 +33,24 @@
       }
     }
 
-    .navBar {
+    nav {
+      display: inline-block;
 
+      a {
+        text-decoration: none;
+        color: $darkBlue;
+        font-size: 13px;
+        font-weight: 600;
+        padding-left: 25px;
+
+        &:hover {
+          color: $lightBlue;
+        }
+      }
+
+      .active {
+        color: $lightBlue;
+      }
     }
   }
 }
