--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,3 +4,6 @@ $darkBlue: #071e33;
 $gray: #a0a3a9;
 $dimGray: #555555;
 $lighterBlue: #dff3fa;
+$paragraf: #5C5C56;
+$border: #DEDEDE;
+$header: #444444;
