--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,24 @@
 .container {
   margin: 0 20% 0 20%; }
 
+hr {
+  border: 1px solid #00b1e4;
+  margin-left: calc(50% - 45px);
+  margin-top: 20px;
+  margin-bottom: 20px; }
+
+h1 {
+  text-align: center;
+  margin-top: 100px; }
+
+.intro-text {
+  text-align: center;
+  padding-bottom: 50px; }
+
 body {
   font-family: "Open Sans", sans-serif; }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
   font-family: "Montserrat", sans-serif; }
 
 .header {
@@ -52,6 +66,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 20px;
   margin-top: 20px; }
   .header .navigation h1 {
+    margin-top: 0;
     font-size: 25px; }
     .header .navigation h1 span {
       color: #00b1e4; }
@@ -72,7 +87,7 @@ h1, h2, h3, h4, h5, h6 {
   background-image: url("../images/intro-carousel/1.jpg");
   height: 665px;
   padding: 250px; }
-  .inspire h1 {
+  .inspire .header {
     font-size: 60px; }
   .inspire p {
     font-size: 20px;
@@ -97,21 +112,14 @@ h1, h2, h3, h4, h5, h6 {
       transition: color 0.5s ease; }
 
 .welcome {
-  margin-top: 50px;
-  text-align: center; }
-  .welcome hr {
-    border: 1px solid #00b1e4;
-    margin-left: calc(50% - 45px);
-    margin-top: 20px;
-    margin-bottom: 20px; }
+  margin-top: 50px; }
   .welcome .wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
-    justify-content: space-between;
-    margin-top: 30px; }
+    justify-content: space-between; }
     .welcome .wrapper .left {
       margin-right: 50px; }
       .welcome .wrapper .left img {
@@ -135,3 +143,32 @@ h1, h2, h3, h4, h5, h6 {
           .welcome .wrapper .right ul li i {
             color: #00b1e4;
             margin-right: 5px; }
+
+.ourService .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  text-align: center; }
+  .ourService .row .column {
+    width: calc(33.33333% - 33.33333px);
+    margin-right: 50px;
+    border: 1px solid #DEDEDE;
+    height: 320px;
+    width: 350px;
+    padding: 55px 15px; }
+    .ourService .row .column:last-child {
+      margin-right: 0; }
+    .ourService .row .column img {
+      height: 85px; }
+    .ourService .row .column h3 {
+      color: #444444;
+      padding-top: 15px;
+      font-size: 20px;
+      font-weight: bold; }
+    .ourService .row .column p {
+      color: #5C5C56;
+      padding-top: 5px;
+      font-size: 15px; }
