--- a/sass/components/section/_clients.scss
+++ b/sass/components/section/_clients.scss
@@ -1,5 +1,18 @@
 .clients-slider {
   img {
     height: 45px;
+    opacity: 0.4;
+    transition-duration: 0.5s;
+    padding-right: 55px;
+
+    &:last-child {
+      padding-right: 0;
+    }
+
+    &:hover {
+      cursor: pointer;
+      opacity: 1;
+      transform: scale(1.1);
+    }
   }
 }
