--- a/sass/components/section/_testimonials.scss
+++ b/sass/components/section/_testimonials.scss
@@ -19,5 +19,15 @@
       width: 280px;
       height: 155px;
     }
+
+    h3 {
+      margin-top: 20px;
+      margin-bottom: 5px;
+    }
+
+    .job-title {
+      font-size: 15px;
+      color: #A6A6A6;
+    }
   }
 }
