--- a/sass/components/section/_testimonials.scss
+++ b/sass/components/section/_testimonials.scss
@@ -2,32 +2,37 @@
   display: flex;
   flex-direction: row;
 
-  .column {
+  .testimonials-item {
     @include column(3, 50px);
-    padding: 0 15px;
+    padding: 30px 30px 0;
+    margin: 30px 15px;
     text-align: center;
 
     .text {
-      padding: 35px 25px;
-      font-size: 13px;
       font-style: italic;
-      border: 1px solid $border;
+      margin: 0 auto 15px auto;
       background-color: #F1F1F1;
-      border-top-left-radius: 20px;
-      border-top-right-radius: 20px;
-      border-bottom-left-radius: 20px;
-      width: 280px;
-      height: 155px;
+      width: 100%;
+      border: 1px solid #DCDCDC;
+      border-radius: 15px 15px 0 15px;
+      padding: 22px 15px;
+      font-size: 15px;
+      color: #686868;
+      font-family: "Open Sans", sans-serif;
     }
 
     h3 {
-      margin-top: 20px;
-      margin-bottom: 5px;
+      font-size: 18px;
+      font-weight: bold;
+      margin: 10px 0 5px 0;
+      color: #111111;
+      font-family: "Montserrat", sans-serif;
     }
 
     .job-title {
-      font-size: 15px;
-      color: #A6A6A6;
+      font-size: 14px;
+      color: #999999;
+      margin: 0;
     }
   }
 }
