--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -17,7 +17,6 @@ hr {
 h1 {
   font-size: 32px;
   color: #071e33;
-  text-transform: uppercase;
   position: relative;
   padding-bottom: 20px;
   text-align: center;
@@ -25,7 +24,7 @@ h1 {
 
 .intro-text {
   margin: 0;
-  padding: 0;
+  padding: 0 0 30px 0;
   text-align: center;
   color: #333333;
 }
