--- a/css/style.css
+++ b/css/style.css
@@ -222,14 +222,13 @@ hr {
 h1 {
   font-size: 32px;
   color: #071e33;
-  text-transform: uppercase;
   position: relative;
   padding-bottom: 20px;
   text-align: center; }
 
 .intro-text {
   margin: 0;
-  padding: 0;
+  padding: 0 0 30px 0;
   text-align: center;
   color: #333333; }
 
@@ -253,20 +252,31 @@ h1, h2, h3, h4, h5, h6, p {
   padding: 10px 20%; }
   .header .contactBar i {
     color: #00b1e4;
-    font-size: 15px; }
+    font-size: 14px; }
     .header .contactBar i:hover {
       cursor: pointer;
       color: white; }
   .header .contactBar small {
-    color: #a0a3a9; }
+    color: #a0a3a9;
+    font-size: 14px; }
   .header .contactBar .contact {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; }
-    .header .contactBar .contact .phone i {
-      padding-left: 20px; }
-  .header .contactBar .socialMedia i {
-    padding-left: 10px; }
+    .header .contactBar .contact .email {
+      padding-right: 12px;
+      border-right: 1px solid #e9e9e924; }
+    .header .contactBar .contact .phone {
+      padding-left: 12px; }
+  .header .contactBar .socialMedia a {
+    padding: 4px 12px;
+    display: inline-block;
+    line-height: 1px;
+    border-left: 1px solid #e9e9e924; }
+  .header .contactBar .socialMedia .first-child {
+    border-left: none; }
+  .header .contactBar .socialMedia .last-child {
+    padding-right: 0; }
 
 .header .navigation {
   display: -webkit-box;
@@ -279,49 +289,106 @@ h1, h2, h3, h4, h5, h6, p {
   margin-top: 20px; }
   .header .navigation h1 {
     margin-top: 0;
-    font-size: 25px; }
+    font-size: 28px;
+    font-family: "Montserrat", sans-serif; }
     .header .navigation h1 span {
       color: #00b1e4; }
   .header .navigation nav {
-    display: inline-block; }
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row; }
     .header .navigation nav a {
+      padding: 10px 8px;
       text-decoration: none;
-      color: #071e33;
-      font-size: 13px;
-      font-weight: 600;
-      padding-left: 25px; }
+      color: #555555;
+      font-family: "Raleway", sans-serif;
+      font-weight: 700;
+      font-size: 14px;
+      outline: none; }
+      .header .navigation nav a:last-child {
+        padding-right: 0; }
       .header .navigation nav a:hover {
         color: #00b1e4; }
     .header .navigation nav .active {
+      color: #00b1e4; }
+  .header .navigation .dropdown {
+    position: relative;
+    margin-right: 10px; }
+    .header .navigation .dropdown .dropbtn {
+      cursor: pointer;
+      background-color: white;
+      border: none;
+      padding: 10px 8px;
+      text-decoration: none;
+      color: #555555;
+      font-family: "Raleway", sans-serif;
+      font-weight: 700;
+      font-size: 14px;
+      outline: none; }
+      .header .navigation .dropdown .dropbtn i {
+        font-size: 10px; }
+    .header .navigation .dropdown .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: white;
+      min-width: 160px;
+      -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+      z-index: 1; }
+      .header .navigation .dropdown .dropdown-content a {
+        font-size: 0.9em;
+        color: #555555;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block; }
+        .header .navigation .dropdown .dropdown-content a:hover {
+          color: #00b1e4; }
+    .header .navigation .dropdown:hover .dropdown-content {
+      display: block; }
+    .header .navigation .dropdown:hover .dropbtn {
+      -webkit-transition: color 0.5s ease;
+      -o-transition: color 0.5s ease;
+      transition: color 0.5s ease;
+      background-color: white;
       color: #00b1e4; }
 
 .inspire {
   background-image: url("../images/intro-carousel/1.jpg");
   height: 665px;
-  padding: 250px; }
+  padding: 250px;
+  font-family: "Montserrat", sans-serif; }
   .inspire .header {
-    font-size: 60px; }
+    color: #071e33;
+    font-size: 66px;
+    font-weight: 700; }
   .inspire p {
-    font-size: 20px;
-    padding-bottom: 30px; }
+    color: #3a3a3a;
+    margin-bottom: 30px;
+    font-size: 24px; }
   .inspire button {
-    width: 160px;
-    height: 40px;
     background-color: #00b1e4;
-    border: none;
-    border-radius: 2px;
+    border: 2px solid #00b1e4;
+    font-family: "Raleway", sans-serif;
     font-size: 15px;
-    color: white;
-    font-weight: bold; }
+    font-weight: bold;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 10px 32px;
+    border-radius: 2px;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+    margin: 0;
+    color: #FFFFFF; }
     .inspire button:hover {
       cursor: pointer;
-      border: 2px solid #00b1e4;
-      background-color: #dff3fa;
+      background: none;
       color: #00b1e4;
-      font-weight: bold;
-      -webkit-transition: color 0.5s ease;
-      -o-transition: color 0.5s ease;
-      transition: color 0.5s ease; }
+      border: 2px solid #00b1e4; }
 
 .welcome {
   padding: 60px 0; }
