--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -7,7 +7,8 @@
 
     i {
       color: $lightBlue;
-      font-size: 15px;
+      font-size: 14px;
+
       &:hover {
         cursor: pointer;
         color: white;
@@ -16,19 +17,36 @@
 
     small {
       color: $gray;
+      font-size: 14px;
     }
 
     .contact {
       display: flex;
+
+      .email {
+        padding-right: 12px;
+        border-right: 1px solid #e9e9e924;
+      }
+
       .phone {
-        i {
-          padding-left: 20px;
-        }
+        padding-left: 12px;
       }
     }
+
     .socialMedia {
-      i {
-        padding-left: 10px;
+      a {
+        padding: 4px 12px;
+        display: inline-block;
+        line-height: 1px;
+        border-left: 1px solid #e9e9e924;
+      }
+
+      .first-child {
+        border-left: none;
+      }
+
+      .last-child {
+        padding-right: 0;
       }
     }
   }
@@ -41,8 +59,8 @@
 
     h1 {
       margin-top: 0;
-      
-      font-size: 25px;
+      font-size: 28px;
+      font-family: "Montserrat", sans-serif;
 
       span {
         color: $lightBlue;
@@ -50,14 +68,21 @@
     }
 
     nav {
-      display: inline-block;
+      display: flex;
+      flex-direction: row;
 
       a {
+        padding: 10px 8px;
         text-decoration: none;
-        color: $darkBlue;
-        font-size: 13px;
-        font-weight: 600;
-        padding-left: 25px;
+        color: #555555;
+        font-family: "Raleway", sans-serif;
+        font-weight: 700;
+        font-size: 14px;
+        outline: none;
+
+        &:last-child {
+          padding-right: 0;
+        }
 
         &:hover {
           color: $lightBlue;
@@ -66,6 +91,61 @@
 
       .active {
         color: $lightBlue;
+      }
+    }
+
+    .dropdown {
+      position: relative;
+      margin-right: 10px;
+
+      .dropbtn {
+        cursor: pointer;
+        background-color: white;
+        border: none;
+        padding: 10px 8px;
+        text-decoration: none;
+        color: #555555;
+        font-family: "Raleway", sans-serif;
+        font-weight: 700;
+        font-size: 14px;
+        outline: none;
+
+        i {
+          font-size: 10px;
+        }
+      }
+
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: white;
+        min-width: 160px;
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+        z-index: 1;
+
+        a {
+          font-size: 0.9em;
+          color: $dimGray;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+
+          &:hover {
+            color: $lightBlue;
+          }
+        }
+      }
+
+      &:hover {
+        .dropdown-content {
+          display: block;
+        }
+
+        .dropbtn {
+          transition: color 0.5s ease;
+          background-color: white;
+          color: $lightBlue;
+        }
       }
     }
   }
