--- a/sass/components/section/_inspire.scss
+++ b/sass/components/section/_inspire.scss
@@ -2,33 +2,39 @@
   background-image: url("../images/intro-carousel/1.jpg");
   height: 665px;
   padding: 250px;
+  font-family: "Montserrat", sans-serif;
 
   .header {
-    font-size: 60px;
+    color: #071e33;
+    font-size: 66px;
+    font-weight: 700;
   }
 
   p {
-    font-size: 20px;
-    padding-bottom: 30px;
+    color: #3a3a3a;
+    margin-bottom: 30px;
+    font-size: 24px;
   }
 
   button {
-    width: 160px;
-    height: 40px;
-    background-color: $lightBlue;
-    border: none;
-    border-radius: 2px;
+    background-color: #00b1e4;
+    border: 2px solid #00b1e4;
+    font-family: "Raleway", sans-serif;
     font-size: 15px;
-    color: white;
     font-weight: bold;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 10px 32px;
+    border-radius: 2px;
+    transition: 0.5s;
+    margin: 0;
+    color: #FFFFFF;
 
     &:hover {
       cursor: pointer;
-      border: 2px solid $lightBlue;
-      background-color: $lighterBlue;
-      color: $lightBlue;
-      font-weight: bold;
-      transition: color 0.5s ease;
+      background: none;
+      color: #00b1e4;
+      border: 2px solid #00b1e4;
     }
   }
 }
