--- a/css/style.css
+++ b/css/style.css
@@ -407,18 +407,29 @@ h1, h2, h3, h4, h5, h6, p {
     .welcome .wrapper .right {
       text-align: left; }
       .welcome .wrapper .right .bold {
-        margin-bottom: 20px;
-        font-weight: bold; }
+        color: #000000;
+        font-weight: 700;
+        font-size: 18px;
+        font-family: "Raleway", sans-serif;
+        margin: 0 0 20px; }
       .welcome .wrapper .right .italic {
-        margin-bottom: 20px;
-        font-style: italic;
-        color: #555555; }
+        line-height: 26px;
+        padding: 0;
+        margin: 0 0 30px;
+        color: #6F6F6F;
+        font-family: "Montserrat", sans-serif;
+        font-size: 18px;
+        font-style: italic; }
       .welcome .wrapper .right .regular {
-        margin-bottom: 20px; }
+        line-height: 26px;
+        font-family: "Open Sans", sans-serif;
+        color: #444;
+        margin: 0 0 30px; }
       .welcome .wrapper .right ul {
-        list-style-type: none; }
+        list-style: none; }
         .welcome .wrapper .right ul li {
-          margin-bottom: 10px; }
+          padding-bottom: 10px;
+          color: #444; }
           .welcome .wrapper .right ul li i {
             color: #00b1e4;
             margin-right: 5px; }
