--- a/sass/components/section/_welcome.scss
+++ b/sass/components/section/_welcome.scss
@@ -18,25 +18,36 @@
       text-align: left;
 
       .bold {
-        margin-bottom: 20px;
-        font-weight: bold;
+        color: #000000;
+        font-weight: 700;
+        font-size: 18px;
+        font-family: "Raleway", sans-serif;
+        margin: 0 0 20px;
       }
 
       .italic {
-        margin-bottom: 20px;
+        line-height: 26px;
+        padding: 0;
+        margin: 0 0 30px;
+        color: #6F6F6F;
+        font-family: "Montserrat", sans-serif;
+        font-size: 18px;
         font-style: italic;
-        color: #555555;
       }
 
       .regular {
-        margin-bottom: 20px;
+        line-height: 26px;
+        font-family: "Open Sans", sans-serif;
+        color: #444;
+        margin: 0 0 30px;
       }
 
       ul {
-        list-style-type: none;
+        list-style: none;
 
         li {
-          margin-bottom: 10px;
+          padding-bottom: 10px;
+          color: #444;
 
           i {
             color: $lightBlue;
