--- a/sass/components/section/_get.scss
+++ b/sass/components/section/_get.scss
@@ -1,11 +1,45 @@
 .get {
   background-color: #00B1E4;
   color: #FFFFFF;
+  padding: 40px 0;
 
   .container {
     h2 {
-      padding-top: 45px;
+      font-size: 28px;
+      font-weight: 700;
+      font-family: "Montserrat", sans-serif;
+      margin-bottom: 20px;
+      line-height: 1.2;
+    }
+
+    .wrap {
+      display: flex;
+      justify-content: space-between;
+
+      .text {
+        p {
+          margin-bottom: 30px;
+          line-height: 1.5;
+          padding-right: 60px;
+        }
+      }
+
+      .btn {
+        button {
+          font-family: "Montserrat", sans-serif;
+          font-weight: 700;
+          font-size: 16px;
+          width: 165px;
+          letter-spacing: 1px;
+          padding: 8px 26px;
+          border-radius: 3px;
+          transition: 0.5s;
+          margin: 10px;
+          border: 3px solid #fff;
+          background: none;
+          color: #fff;
+        }
+      }
     }
   }
-
 }
