--- a/css/style.css
+++ b/css/style.css
@@ -228,9 +228,15 @@ h1 {
 
 .intro-text {
   margin: 0;
-  padding: 0 0 30px 0;
+  padding: 0 0 30px;
   text-align: center;
   color: #333333; }
+
+.sticky {
+  position: fixed;
+  margin-top: -43px;
+  -webkit-box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.06);
+  box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.06); }
 
 body {
   font-family: "Open Sans", sans-serif; }
@@ -279,16 +285,20 @@ h1, h2, h3, h4, h5, h6, p {
     padding-right: 0; }
 
 .header .navigation {
+  padding: 20px 20%;
+  left: 0;
+  right: 0;
+  z-index: 2000;
+  background-color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between;
-  margin-top: 20px;
-  margin-top: 20px; }
+  justify-content: space-between; }
   .header .navigation h1 {
     margin-top: 0;
+    padding-bottom: 0;
     font-size: 28px;
     font-family: "Montserrat", sans-serif; }
     .header .navigation h1 span {
