--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -24,7 +24,13 @@ h1 {
 
 .intro-text {
   margin: 0;
-  padding: 0 0 30px 0;
+  padding: 0 0 30px;
   text-align: center;
   color: #333333;
+}
+
+.sticky {
+  position: fixed;
+  margin-top: -43px;
+  box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.06);
 }
