--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -52,13 +52,18 @@
   }
 
   .navigation {
+    padding: 20px 20%;
+    // position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 2000;
+    background-color: #fff;
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
-    margin-top: 20px;
 
     h1 {
       margin-top: 0;
+      padding-bottom: 0;
       font-size: 28px;
       font-family: "Montserrat", sans-serif;
 
