--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -15,7 +15,21 @@
     &:hover {
       cursor: pointer;
       background-color: #0c2e8a;
-      border: none;
     }
+  }
+}
+
+button {
+  font-size: 15px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 32px;
+  transition: 0.5s;
+  margin: 0;
+  color: #FFFFFF;
+
+  &:hover {
+    cursor: pointer;
   }
 }
