--- a/sass/components/section/_get.scss
+++ b/sass/components/section/_get.scss
@@ -25,19 +25,20 @@
       }
 
       .btn {
+        width: 50%;
+        text-align: right;
         button {
           font-family: "Montserrat", sans-serif;
-          font-weight: 700;
-          font-size: 16px;
-          width: 165px;
-          letter-spacing: 1px;
-          padding: 8px 26px;
           border-radius: 3px;
-          transition: 0.5s;
-          margin: 10px;
           border: 3px solid #fff;
           background: none;
           color: #fff;
+
+          &:hover {
+            background-color: #fff;
+            color: #00b1e4;
+            border: 2px solid #fff;
+          }
         }
       }
     }
