--- a/sass/components/section/_testimonials.scss
+++ b/sass/components/section/_testimonials.scss
@@ -1,6 +1,7 @@
 .testimonials-slider {
   display: flex;
   flex-direction: row;
+  padding-bottom: 50px;
 
   .testimonials-item {
     @include column(3, 50px);
@@ -10,7 +11,7 @@
 
     .text {
       font-style: italic;
-      margin: 0 auto 15px auto;
+      margin: 0 auto 15px;
       background-color: #F1F1F1;
       width: 100%;
       border: 1px solid #DCDCDC;
@@ -24,7 +25,7 @@
     h3 {
       font-size: 18px;
       font-weight: bold;
-      margin: 10px 0 5px 0;
+      margin: 10px 0 5px;
       color: #111111;
       font-family: "Montserrat", sans-serif;
     }
@@ -35,4 +36,8 @@
       margin: 0;
     }
   }
+}
+
+.slick-dots {
+  padding-bottom: 50px;
 }
