--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -32,5 +32,5 @@ h1 {
 .sticky {
   position: fixed;
   margin-top: -43px;
-  box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 6px 9px 0 rgba(0, 0, 0, 0.06);
 }
