--- a/sass/components/_sections.scss
+++ b/sass/components/_sections.scss
@@ -1,3 +1,4 @@
+//index.html
 @import "section/inspire";
 @import "section/welcome";
 @import "section/ourService";
@@ -5,3 +6,6 @@
 @import "section/testimonials";
 @import "section/get";
 @import "section/footer";
+
+//about.html
+@import "section/aboutUs";
